# G4X-helpers

./: .bumpversion.toml  .dockerignore  .gitignore  .pre-commit-config.yaml  .rich-codex.yml  404.html  CHANGELOG  CHANGELOG.md  CHANGELOG.rst  Dockerfile  README.md  api_demo.ipynb  demo.ipynb  index.html  mkdocs.yml  pyproject.toml  requirements.txt  ruff.toml  setup.py  sitemap.xml
.github/actions/setup-project/: action.yml
.github/workflows/: build-image.yml  demo_data.yml  deploy-mkdocs.yml  docker-build.yml  docker-check.yml  docker-release.yml  docker_check.yml  mkdocs-deploy.yml  publish.yml  pytest-run.yml  pytest.yml  rich-codex.yml  setup_project.yml  submodule_check.yml  test-arm.yml  test_composite.yml
_core/: core.mkdocs.yml
archive/: requirements.txt  setup.pydepr
changelog/: index.html
clog/: index.html
contributing/: index.html
docs/: _index.md  conf.py  contributing.md  index.md  index.rst  installation.rst  readme.rst
docs/_partials/: arg_g4x_data.md  arg_in_place.md  args_optns.md  global_options_note.md
docs/contributing/: index.md
docs/features/: 1_resegment.md  2_update_bin.md  3_new_bin.md  4_tar_viewer.md  index.md  migrate.md  new_bin.md  redemux.md  resegment.md  tar_viewer.md  update_bin.md
docs/g4x_data/: data_import.md  g4x_output.md  index.md
docs/g4x_helpers/: index.md  installation.md  usage.md
docs/g4x_helpers/features/: index.md  new_bin.md  redemux.md  resegment.md  tar_viewer.md  update_bin.md
docs/g4x_helpers/installation/: _installation.md  docker.md  index.md  source.md
docs/g4x_tools/g4x_helpers/: index.md  usage.md
docs/g4x_tools/g4x_viewer/: index.md  installation.md
docs/g4x_tutorials/: index.md  plot_spatial.md  segment_data.md
docs/g4x_viewer/: resources.md
docs/getting_started/: 1_installation.md  3_g4x_output.md  first_steps.md  index.md  installation.md
docs/getting_started/features/: index.md  new_bin.md  update_bin.md
docs/installation/: docker.md  index.md  source.md
docs/stylesheets/: _extra.css  extra.css
docs/usage/: index.md
features/: index.html
features/migrate/: index.html
features/new_bin/: index.html
features/redemux/: index.html
features/resegment/: index.html
features/tar_viewer/: index.html
features/update_bin/: index.html
g4x_data/: index.html
g4x_data/data_import/: index.html
g4x_data/g4x_output/: index.html
g4x_helpers/: index.html
g4x_helpers/features/: index.html
g4x_helpers/features/new_bin/: index.html
g4x_helpers/features/resegment/: index.html
g4x_helpers/features/tar_viewer/: index.html
g4x_helpers/features/update_bin/: index.html
g4x_helpers/installation/: index.html
g4x_helpers/installation/docker/: index.html
g4x_helpers/installation/source/: index.html
g4x_helpers/usage/: index.html
installation/: index.html
installation/docker/: index.html
installation/source/: index.html
search/: search_index.json
src/g4x-helpers/: __init__.py  models.py
src/g4x_helpers/: __init__.py  cli.py  cli_utils.py  constants.py  demux.py  entrypoint.py  g4x_output.py  logging_utils.py  main_features.py  models.py  plotting.py  roi.py  segmentation.py  tar_viewer.py  utils.py  validator.py
src/g4x_helpers/cli/: cli.py  cli_setup.py
src/g4x_helpers/dataclasses/: Roi.py  Signal.py
src/g4x_helpers/g4x_viewer/: CellMasksSchema_pb2.py  CellMasksSchema_pb2.pyi  bin_generator.py  bin_utils.py  cells.py  images.py  transcritps.py  tx_generator.py
src/g4x_helpers/io/: __init__.py  compute_backend.py  convert.py  file_migrators.py  input.py  pathval.py  rapids_check.py  sample_g4x.py  serve.py  validate.py  validator.py
src/g4x_helpers/modules/: __init__.py  aggregate.py  bin_generation.py  bin_operations.py  demultiplexing.py  demux.py  edit_bin.py  init_bin.py  io.py  new_bin.py  package_viewer.py  redemux.py  resegment.py  seg_converter.py  seg_intersect.py  seg_updater.py  segment.py  segmentation.py  single_cell.py  tar_viewer.py  transcript_tar.py  tx_converter.py  tx_generation.py  update_bin.py  viewer_dir.py  workflow.py
src/g4x_helpers/out_schemas/: min_required.txt  schema_v2.txt  schema_v3.txt
src/g4x_helpers/process/: __init__.py  images.py  transcripts.py
src/g4x_helpers/schema/: __init__.py  definition.py  file_tree.py  migrator.py  validator.py
src/g4x_helpers/schemas/: base_schema.txt  constants.py  migration.py  schema_converter.py  schema_validation.py  v1.txt  v1_source.txt  v2.txt  v2_source.txt  validate.py  validator.py
src/g4x_helpers/viewer/: __init__.py  cells.py  images.py  setup.py  transcritps.py
src/g4x_helpers/workflows/: decorator.py  redemux.py  seg_converter.py  seg_intersect.py  seg_updater.py  tar_viewer.py  tx_converter.py
src/g4x_helpers/zarr/: __init__.py  (+3 more)
stylesheets/: sg_colors.css
tests/: cli_commands.yml  conftest.py  get_demo_data.sh  get_test_data.sh  test_cli_commands.py  test_cli_features.py  test_cli_features.sh  test_smoketest.py  untar_test_data.sh
tests/scripts/: get_test_data.sh  get_test_data_md5.sh  test_cli_features.sh  untar_test_data.sh
usage/: index.html
(+30 files in other folders)
