[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "g4x_helpers"
version = "0.3.0"

description = "Python helpers for G4X."
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Kenneth Gouin III", email = "kennethg@singulargenomics.com" },
    { name = "Florian Raths", email = "flo.raths@singulargenomics.com" },
]
requires-python = ">=3.10, <3.11"

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]

urls = { Homepage = "https://github.com/Singular-Genomics/G4X-helpers" }
dependencies = [
    "geopandas ~= 1.0",
    "glymur ~= 0.13",
    "matplotlib ~= 3.7",
    "polars ~= 1.30",
    "rasterio ~= 1.4",
    "ray ~= 2.44",
    "scanpy ~= 1.10",
    "scikit-image ~= 0.25",
    "shapely ~= 2.1",
]

[dependency-groups]
dev = [
    "mkdocs >= 1.6.1",
    "mkdocs-material >= 9.6.15",
    "pre-commit >= 4.2.0",
    "ruff == 0.12.2", # pinned to match pre-commit version
    "bump-my-version ~= 1.2.0",
]

[project.scripts]
new_bin = "g4x_helpers.entrypoint:launch_new_bin"
resegment = "g4x_helpers.entrypoint:launch_resegment"
tar_viewer = "g4x_helpers.entrypoint:launch_tar_viewer"
update_bin = "g4x_helpers.entrypoint:launch_update_bin"
