[build-system]
requires = ["uv_build>=0.11.2,<0.12"]
build-backend = "uv_build"

[project]
name = "g4x_helpers"
version = "4.0.0.dev5"

description = "Python helpers for G4X."
urls = { repository = "https://github.com/Singular-Genomics/G4X-helpers" }
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Kenneth Gouin III", email = "kennethg@singulargenomics.com" },
    { name = "Florian Raths", email = "flo.raths@singulargenomics.com" },
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]

requires-python = ">=3.10, <3.12"

dependencies = [
    "geopandas ~= 1.1",
    "glymur >= 0.12, <= 0.13.4",
    "polars ~= 1.38",
    "rasterio >= 1.4",
    "scanpy ~= 1.11",
    "scikit-image ~= 0.25",
    "shapely ~= 2.1",
    "pyarrow ~= 19.0",
    "rich-click ~= 1.9",
    "ome-zarr ~= 0.10",
    "igraph >= 1.0.0",
    "imagecodecs == 2025.3.30",
]

[project.optional-dependencies]
gpu = ["rapids-singlecell[rapids12] ~=0.13; sys_platform == 'linux'"]

[dependency-groups]
dev = [
    "ipykernel ~= 7.1",
    "ipywidgets ~= 8.1",
    "pre-commit ~= 4.5",
    "pytest ~= 9.0",
    "ruff == 0.15.9",               # pinned to match pre-commit version
    "mpl-spaceplot>=0.3.0",
    "dask[diagnostics]>=2024.11.2",
]
docs = ["mkdocs ~= 1.6", "mkdocs-material ~= 9.7", "rich-codex ~= 1.2"]

[project.scripts]
g4x-helpers = "g4x_helpers.cli.cli:cli"

[[tool.uv.index]]
url = "https://pypi.nvidia.com"

[tool.uv]
required-version = ">=0.9"
default-groups = ["dev", "docs"]
index-strategy = "unsafe-best-match"

[tool.uv-ship]
release-branch = "staging"
changelog-path = "CHANGELOG.md"
changelog-template = "- {message}"
date-first = true
